chrome/browser/ui/webui/settings/settings_default_browser_handler.cc
@@ -22,7 +22,10 @@ bool DefaultBrowserIsDisabledByPolicy() {
       g_browser_process->local_state()->FindPreference(
           prefs::kDefaultBrowserSettingEnabled);
   DCHECK(pref);
-  return pref->IsManaged() && !pref->GetValue();
+  bool may_set_default_browser;
+  bool success = pref->GetValue()->GetAsBoolean(&may_set_default_browser);
+  DCHECK(success);
+  return pref->IsManaged() && !may_set_default_browser;
 }
 
 }  // namespace
